[package]
name = "hypertext_garnish"
description = "Serialization/deserialization of garnish data to HTML/CSS."
version = "0.2.0"
authors = ["Chad Collins <chad.collins@capitalone.com>"]
edition = "2021"
homepage = "https://github.com/garnish-lang/hypertext-garnish"
documentation = "https://github.com/garnish-lang/hypertext-garnish"
repository = "https://github.com/garnish-lang/hypertext-garnish"
license-file = "./LICENSE"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_garnish = "0.2.0"
garnish_lang = "0.0.4-alpha"
